[UPD] Exercise done but still issues with jumbotron horizontal alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,11 @@ body {
 GENERAL CONTAINERS
 ***********/
 
-.row {
+.container {
+    margin: 0 auto;
+}
+
+.row  {
     width: 85%;
     margin: 0 auto;
 }
@@ -127,6 +131,8 @@ JUMBOTRON SECTION
 
 .content-card p {
     padding-bottom: 30px;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 /*******************
@@ -320,9 +326,9 @@ ABOUT US SECTION
 #quotations {
     font-size: 70px;
     color: rgb(151, 146, 228);
-    position: absolute;
-    top: -1rem;
-    right: 0.5rem;
+    position: relative;
+    bottom: 1rem;
+    right: 3.5rem;
 }
 
 .quote button {
@@ -428,16 +434,28 @@ UTILITY
     justify-content: space-between;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 .align-center {
     align-items: center;
+}
+
+.align-end {
+    align-items: end;
 }
 
 .flex-direction {
     flex-direction: column;
 }
 
-.width-50 {
-    width: 50%;  
+.width-30 {
+    width: 30%;  
+}
+
+.width-70 {
+    width: 70%;
 }
 
 .full-width {
@@ -496,25 +514,15 @@ RESPONSIVENESS
 **************************************/
 
 /****************
-DESKTOP LAYOUT
-****************/
-
-@media screen and (min-width: 992px) {
-    
-}
-
-
-
-
-
-
-
-
-/****************
 TABLET LAYOUT
 ****************/
 
 @media screen and (min-width: 481px) {
+
+    .container {
+        width: 100%;
+        max-width: 991px;
+    }
 
     ul li, #header-button {
         display: none;
@@ -533,15 +541,16 @@ TABLET LAYOUT
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-        gap: 10px;
     }
 
     .jumbotron .col-small {
-        width: calc(100% / 3 - 20px);
+        width: calc(100% / 3 - 30px);
+        margin-left: 15px;
+        margin-right: 15px;
     }
 
     .jumbotron .special-card {
-        width: calc((100% / 3) * 2 - 20px);
+        width: calc((100% / 3) * 2 - 30px);
     }
 
     .special-card .content-card {
@@ -549,6 +558,7 @@ TABLET LAYOUT
     }
 
     #jumbo-phone {
+        width: 60%;
         margin: 0;
     }
 
@@ -604,11 +614,32 @@ TABLET LAYOUT
 
     
 
+/****************
+DESKTOP LAYOUT
+****************/
 
 @media screen and (min-width: 769px) {
 
+    .col .width-30,
+    .col .width-70 {
+        margin: 0;
+    }
+
+    li a {
+        font-size: 14px;
+    }
+
+    .content.content-header-right {
+        justify-content: end;
+        align-items: center;
+    }
+
+    .content-header-right {
+        width: 100%;
+    }
+
     .content-header-right li {
-        padding-right: 20px;
+        padding-right: 10px;
         line-height: 50px;
     }
     
@@ -618,9 +649,13 @@ TABLET LAYOUT
     }
 
     #header-button {
+        width: 17%;
         border-radius: 20px;
         background-color: white;
         border: none;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        margin-left: 10px;
     }
 
     .col,
@@ -630,6 +665,10 @@ TABLET LAYOUT
     .benefits-content,
     .about .row {
         display: flex;
+    }
+
+    .planning img {
+        width: 90%;
     }
 
     .planning .col {
@@ -654,6 +693,35 @@ TABLET LAYOUT
         width: calc(100% / 3);
     }
 
+    .special-card .content-card {
+        display: flex;
+    }
+
+    .content-card button {
+        width: 90%;
+    }
+
+    #jumbo-phone {
+        object-fit: contain;
+        width: 100%;
+    }
+
+    .col.grid-cards .col-small {
+        width: calc(100% / 3 - 10px);
+    }
+
+    .quote.relative h3 {
+        width: 70%;
+    }
+
+    .text-center.d-flex.justify-center {
+        align-items: start;
+    }
+
+    .quote button {
+        width: 55%;
+    }
+
     .col {
         flex-wrap: wrap;
         gap: 5px;
@@ -662,5 +730,27 @@ TABLET LAYOUT
 
     .col-small {
         width: calc(100% / 3 - 10px);
+    }
+
+    .white-card.bg-white {
+        height: 77%;
+    }
+
+    .white-card.bg-white img {
+        width: 70%;
+    }
+
+    #jumbo-phone,
+    .call-to-action .col,
+    footer .col:last-child {
+        display: block;
+    }
+
+    .button-get button {
+        width: 30%;
+    }
+
+    footer .row {
+        width: 70%;
     }
 }
